http://bugzilla.gnome.org/show_bug.cgi?id=124513 merge in patch to

2003-10-24  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=124513
	* main.c (setup_font_sample) : merge in patch to allocate black and
	  white correctly on TruColor displays.